--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -26,11 +26,14 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
+\setlength{\parindent}{0pt}
+
 
  \def\be   {\begin{align}}   
  \def\ee   {\end{align}}
 
 \newcommand{\order}[1]{\mathcal{O}\left( #1 \right)}
+\newcommand{\Lqcd}{\Lambda_{\text{QCD}}}
 
 % centered page environment
 
