--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,3 +1,65 @@
+@article{Falk:1992wt,
+      author         = "Falk, Adam F. and Neubert, Matthias",
+      title          = "{Second order power corrections in the heavy quark
+                     effective theory. 1. Formalism and meson form-factors}",
+     journal        = "Phys. Rev.",
+      volume         = "D47",
+      year           = "1993",
+      pages          = "2965-2981",
+     doi            = "10.1103/PhysRevD.47.2965",
+     eprint         = "hep-ph/9209268",
+      archivePrefix  = "arXiv",
+       primaryClass   = "hep-ph",
+     reportNumber   = "SLAC-PUB-5897",
+      SLACcitation   = "%%CITATION = HEP-PH/9209268;%%"
+										    }
+										    
+
+@article{PhysRevD.87.034503,
+  title = {Direct determination of the strange and light quark condensates from full lattice QCD},
+    author = {McNeile, C. and Bazavov, A. and Davies, C. T. H. and Dowdall, R. J. and Hornbostel, K. and Lepage, G. P. and Trottier, H. D.},
+      journal = {Phys. Rev. D},
+        volume = {87},
+	  issue = {3},
+	    pages = {034503},
+	      numpages = {21},
+	        year = {2013},
+		  month = {Feb},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevD.87.034503},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevD.87.034503}
+			}
+			
+
+@article{Scherer:2002tk,
+      author         = "Scherer, Stefan",
+            title          = "{Introduction to chiral perturbation theory}",
+	          journal        = "Adv. Nucl. Phys.",
+		        volume         = "27",
+			      year           = "2003",
+			            pages          = "277",
+				          note           = "[,277(2002)]",
+					        eprint         = "hep-ph/0210398",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-ph",
+							          reportNumber   = "MKPH-T-02-09",
+								        SLACcitation   = "%%CITATION = HEP-PH/0210398;%%"
+									}
+
+@article{Fubini:1964boa,
+      author         = "Fubini, S. and Furlan, G.",
+            title          = "{Renormalization effects for partially conserved
+                        currents}",
+			      journal        = "Physics Physique Fizika",
+			            volume         = "1",
+				          year           = "1965",
+					        number         = "4",
+						      pages          = "229-247",
+						            doi            = "10.1103/PhysicsPhysiqueFizika.1.229",
+							          SLACcitation   = "%%CITATION = INSPIRE-1304369;%%"
+								  }
+								  
+
 @article{Hammant:2013sca,
       author         = "Hammant, T. C. and Hart, A. G. and von Hippel, G. M. and
                         Horgan, R. R. and Monahan, C. J.",
@@ -661,6 +723,49 @@ SLACcitation   = "%%CITATION = ARXIV:1212.4768;%%"
       reportNumber   = "FERMILAB-PUB-15-425-T, NSF-KITP-15-134",
       SLACcitation   = "%%CITATION = ARXIV:1510.02349;%%"
 }
+
+@article{ALTAREV1992242,
+title = "New measurement of the electric dipole moment of the neutron",
+journal = "Physics Letters B",
+volume = "276",
+number = "1",
+pages = "242 - 246",
+year = "1992",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(92)90571-K",
+url = "http://www.sciencedirect.com/science/article/pii/037026939290571K",
+author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and E.A. Kolomensky and M.S. Lasakov and V.M. Lobashev and V.A. Nazarenko and A.N. Pirozhkov and A.P. Serebrov and Yu.V. Sobolev and E.V. Shulgina and A.I. Yegorov"
+}
+
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+							    }
+							    
+
+@article{PhysRevLett.30.1343,
+  title = {Ultraviolet Behavior of Non-Abelian Gauge Theories},
+    author = {Gross, David J. and Wilczek, Frank},
+      journal = {Phys. Rev. Lett.},
+        volume = {30},
+	  issue = {26},
+	    pages = {1343--1346},
+	      numpages = {0},
+	        year = {1973},
+		  month = {Jun},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.30.1343},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.30.1343}
+			}
+			
 
 @article{Jager:2014rwa,
       author         = "Jäger, Sebastian and Martin Camalich, Jorge",
